styles/LogIn.module.scss
@import 'mixins';

.main {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: calc(100vh - 10rem);
}

.title {
  @include text-style-h3-bold;
  margin-bottom: 3rem;
}

.loginButtons {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 24rem;
  gap: 1rem;
}

.loginButton {
  @include outlined-button;
  position: relative;
  width: 20rem;

  @include for-tablet-portrait-up {
    width: 24rem;
  }
}

.loginButton.kakao {
  background-color: rgb(254, 229, 0);
  border-width: 0;
}

.loginButton.naver {
  background-color: #04c75a;
  border-width: 0;
  color: white;
}

.loginButtonIcon {
  position: absolute;
  left: 1rem;
  width: 24px;
  height: 24px;

  @include for-tablet-portrait-up {
    left: 2rem;
  }
}

